# orthodox-obsidian

./: .gitignore  .linear.toml  CLAUDE.md  Orthodox-Vault-Goals.md  PLAN.md  README.md  manifest  pyproject.toml  requirements-dev.txt  sources.yaml
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
assets/: Daily Note.md  getOrthodoxData.js  orthodox-vault.css
data/: parallel_passages.yaml
docs/: alter-epub-source-structure.md  apostolic-fathers-source-structure.md  dbh-nt-source-structure.md  ddd-architecture-review.md  eob-epub-source-structure.md  eob-pdf-source-structure.md  field-testing-friction-log.md  goarch-greek-nt-source-structure.md  greek-nt-source-structure.md  implementation-architecture.md  lexham-epub-source-structure.md  manley-source-structure.md  net-epub-source-structure.md  net-pdf-source-structure.md  nets-epub-source-structure.md  noab-pdf-source-structure.md  osb-epub-source-structure.md  pdf_extraction_benchmark.md  pdf_extraction_evaluation.md  refactor-analysis.md  source-roadmap.md  taxonomy-refactor-plan.md  validation-plan.md
scripts/: benchmark_pdf_extraction.py  evaluate_pdf_extractors.py  extract_alter.py  extract_apostolic_fathers.py  extract_apostolic_fathers_companions.py  extract_dbh.py  extract_eob.py  extract_greek_lxx.py  extract_greek_nt.py  extract_greek_nt_goarch.py  extract_lectionary.py  extract_lexham.py  extract_lexham_notes.py  extract_manley.py  extract_net.py  extract_nets.py  extract_noab.py  extract_osb.py  extract_osb_intros.py  extract_parallel_passages.py  fix_book_id.py  fix_frontmatter.py  (+4 more)
(+69 files in other folders)
